# final

./: package.json
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  epicenter_native_jni.cpp
android/app/src/main/java/com/epicenter/hifi/: EpicenterNativeAudioProcessor.java  EpicenterRenderersFactory.java  EpicenterSettingsStore.java  MusicScannerPlugin.java  NativeAudioPlaybackService.java  NativeAudioPlayerPlugin.java  NativeEpicenterJni.java  TrackDao.java  TrackEntity.java
client/public/: epicenter-worklet.js
client/src/hooks/: useAndroidMusicLibrary.ts  useAudioQueue.ts  useIntegratedAudioProcessor.ts  useStreamingEpicenter.ts
client/src/i18n/: en.json  es.json
client/src/lib/: musicLibraryDB.ts
client/src/pages/: Home.tsx
client/src/worklets/: epicenter-worklet.ts
